# ai_ey

./: .gitignore  README.md  aplikacja.py  checkpoints.db  main.py  pyproject.toml  requirements.txt  warsztaty-ai-llm.pptx
labs/lab-01/: README.md  cwiczenia.md  tutorial-python.md  tutorial.md
labs/lab-01/cwiczenia-python/: 01-podstawy.md  02-kontrola-przeplywu.md  03-funkcje-i-moduly.md  04-dane-i-pliki.md  05-oop.md  06-most-do-ai.md  README.md
labs/lab-01b/: QUICKSTART.md  README.md  cwiczenia.md  requirements-lab01b.txt  tutorial.md
labs/lab-01b/examples/: 01_basic_ollama.py  02_temperature_effect.py  03_lcel_chain.py  04_model_comparison.py  05_structured_output.py  06_multi_turn_conversation.py
labs/lab-02/: README.md  fastapi-tutorial.md  tutorial.md
labs/lab-02/solution/: app.py
labs/lab-03/: README.md  tutorial.md
labs/lab-03/solution/: app.py
labs/lab-04/: README.md  tutorial.md
labs/lab-04/additional/: multivector.py  naive_rag_1.py  naive_rag_2.py  query_expansion.py  rag_stuff_document_chain.py  sql_rag.py
labs/lab-04/data/: baza_wiedzy.txt
labs/lab-04/solution/: app.py
labs/lab-05/: README.md  tutorial.md
labs/lab-05/before-lab/: agent_1.py  agent_2_inmemory.py  agent_3_postgres.py  agent_3_sqlite.py
labs/lab-05/solution/: agent_memory.py  app.py  memory.py  tools.py
labs/lab-06/: README.md  tutorial.md
labs/lab-06/solution/: 01_summarization.py  02_pii_detection.py  03_call_limits.py  04_human_in_the_loop.py  05_tool_retry.py  06_combined.py  _smoke_test.py  tools.py
