[project]
name = "ai-ey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma>=0.2.0",
    "eodhd>=1.0.32",
    "faiss-cpu>=1.14.3",
    "fastapi[all]>=0.138.0",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "ollama>=0.6.2",
    "openai>=2.41.1",
    "pypdf>=6.14.0",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
    "tavily-python>=0.7.26",
    "wikipedia>=1.4.0",
]
